--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,5 +1,7 @@
 body {
-    background: #232323
+    background: #232323;
+    margin: 0;
+    font-family: "Montserrat";
 }
 .square {
     width: 30%;
@@ -7,13 +9,67 @@ body {
     padding-bottom: 30%;
     float: left;
     margin: 1.66%;
-    border-radius: 35px;
+    border-radius: 15%;
+    transition: all .6s;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
 }
 #container {
-    margin: 0 auto;
+    margin: 20px auto;
     max-width: 600px;
 
 }
 h1{
     color: white;
+    line-height: 1.1;
+    padding: 20px 0;
+    text-align: center;
+    background: steelblue;
+    margin: 0;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+span {
+    color: white;
+}
+#stripe{
+    background: white;
+    height: 30px;
+    text-align: center;
+}
+#stripe > span {
+    color: black;
+}
+.selectedBtn {
+    background: steelblue;
+    color: white;
+}
+#colorDisplay {
+    font-size: 200%;
+
+}
+button {
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    font-family: "Montserrat";
+    height: 100%;
+    font-size: inherit;
+    font-weight: 700;
+    color: steelblue;
+    letter-spacing: 1px;
+    transition: all .3s;
+}
+button:hover{
+    background: steelblue;
+    color: white;
+}
+
+button:focus {
+    outline:0;
+}
+
+#message{
+    display: inline-block;
+    width: 20%;
 }
